--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,25 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-8" id="cy"></div>
+			<div class="col-md-8" id="maincontent">
+				<div id="cy"></div>
+				<div id="scroll-down" class="button-bottom-right">
+					<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+						<path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+						<path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+				  	</svg>
+				</div>
+			</div>
 			<div class="col-md-4" id="sidebar">
 				<h2 id="action-name"></h2>
 				<img id="action-img" class="side-image" src="" />
 				<video id="action-video" class="side-image" muted="true" src=""></video>
+				<div id="scroll-up" class="button-bottom-right">
+					<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+						<path fill-rule="evenodd" d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z"/>
+						<path fill-rule="evenodd" d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>					  
+				  	</svg>
+				</div>
 			</div>
 		</div>
 	</div>
