--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,18 @@
 						<path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
 				  	</svg>
 				</div>
-				<div id="sequence">
-					<button type="button" id="add-step">Add Step</button>
-					<ul id="steps">
-					</ul>
-					<input type="text" value="" id="share-url"><button type="button" id="share-link">Share Link</button>
+				<div id="editing">
+					<div id="sequence">
+						<button type="button" id="add-step">Add Step</button>
+						<ul id="steps">
+						</ul>
+						<input type="text" value="" id="share-url"><button type="button" id="share-link">Share Link</button>
+					</div>
+					<div id="edit-graph">
+						<button type="button" id="add-node">Add Node</button>
+						<button type="button" id="add-edge">Add Edge</button>
+						<button type="button" id="save">Save</button>
+					</div>
 				</div>
 			</div>
 			<div class="col-md-4" id="sidebar">
